kubernetes/nginx-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exemplo-ingress
  annotations: 
    nginx.ingress.kubernetes.io.rewrite-target: /$1
spec: 
  rules:
   - host: exemplo-ingress.com
     http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 8080
        - path: /web2
          pathType: Prefix
          backend:
            service:
              name: web2
              port:
                number: 8080
